--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,10 @@
 img {
   max-height: 100%;
 }
+body {
+  overflow-x: hidden;
+}
+
 input,
 textarea,
 select {
@@ -85,4 +89,87 @@ table.basic a {
   width: fit-content;
   align-content: center;
   margin: 1rem;
+}
+
+.SingInSec {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.SingInSec::before {
+  content: "";
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#d9121f, #e9911e);
+  clip-path: circle(22% at 10% 20%);
+}
+
+.SingInSec::after {
+  content: "";
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#e9911e 50%, #d9121f);
+  clip-path: circle(20% at 80% 90%);
+}
+
+.SingInSec.head {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.SingInSec-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
+.SingInSec-box {
+  height: 50%;
+  background-color: #fff !important;
+  padding: 1rem 3rem;
+  display: flex;
+  flex-flow: column;
+  box-shadow: 0px 0px 25px #0000002a;
+  border-radius: 1rem;
+  z-index: 1;
+}
+
+.logInBtn {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  box-shadow: 0px 0px 2px #0000002a;
+  height: fit-content;
+}
+.logInBtn-con {
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  flex: 1;
+}
+
+.deewall_logp {
+  color: #d9121f;
+  text-decoration: none;
+  position: relative;
+  font-size: 1.3rem;
+  font-weight: 500;
+  z-index: 100;
+}
+
+@media screen and (max-width: 576px) {
+  .SingInSec-box {
+    padding: 1rem 2rem;
+  }
 }
